--- a/style.css
+++ b/style.css
@@ -79,14 +79,6 @@ body {
   height: 100%;
 }
 
-body {
-  font-family: "Archivo Expanded", sans-serif;
-  font-size: clamp(0.875rem, 0.696rem + 0.764vw, 1.25rem);
-  font-weight: 300;
-  line-height: 1.4;
-  -webkit-font-smoothing: antialiased;
-}
-
 img,
 picture,
 video,
@@ -150,9 +142,18 @@ h6 {
 }
 
 /* ==================== Styles ==================== */
+html {
+  scroll-behavior: smooth;
+}
 body {
+  font-family: "Archivo Expanded", sans-serif;
+  font-size: clamp(0.875rem, 0.696rem + 0.764vw, 1.25rem);
+  font-weight: 300;
+  line-height: 1.4;
+  height: auto;
   max-width: 1920px;
   margin: 0 auto;
+  -webkit-font-smoothing: antialiased;
 }
 a {
   text-decoration: none;
@@ -168,22 +169,40 @@ hr {
   border: 0;
   border-bottom: 1px solid var(--clr-black);
 }
-
 /* header */
 header .container {
+  position: relative;
   padding-block: 1rem;
   justify-content: space-between;
   align-items: center;
 }
-
-header .logo > img {
+header .logo__img {
   height: 60px;
 }
-
-header nav a {
+nav a {
   color: var(--clr-gray);
+  transition: .3s ease-out;
 }
-
+nav a:hover {
+  transform: scale(1.05);
+  }
+.nav__list {
+  list-style: none;
+  display: flex;
+  padding: 0;
+}
+.nav__item {
+  opacity: 1;
+  transition: .3s ease-out;
+}
+.nav__item:hover {
+  opacity: 0.6;
+}
+.nav__cta {
+  display: flex;
+  position: relative;
+  text-transform: uppercase;
+}
 header hr {
   width: calc(100% - var(--container-padding));
   float: right;
@@ -238,12 +257,12 @@ header hr {
 }
 
 /* sub menu */
-.bg-basketball {
+.subMenu__bg {
   background: url(./images/basketball_ellipse-top.svg), url(./images/basketball_M.svg), url(./images/basketball_line.svg), url(./images/basketball_ellipse-bottom.svg), var(--clr-orange);
   background-position: center top, center, top center, bottom center;
   background-repeat: no-repeat, no-repeat, repeat-y, no-repeat;
 }
-.bg-basketball .container {
+.subMenu__bg .container {
   flex-direction: column;
   justify-content: space-between;
   color: var(--clr-white);
@@ -447,8 +466,8 @@ header hr {
 
 /* ==================== MEDIA QUERY ==================== */
 
-/* ---------- 768px ---------- */
-@media (min-width: 768px) {
+/* ---------- min 768px ---------- */
+@media screen and (min-width: 768px) {
   /* hero */
   #hero {
     margin: 3rem 0 5rem;
@@ -520,24 +539,48 @@ header hr {
   }
 }
 
-/* ---------- 920px ---------- */
-@media (min-width:920px) {
+/* ---------- min 920px ---------- */
+@media screen and (min-width:920px) {
   /* header */
-  header .logo > img {
+  header .logo__img {
     height: 120px;
   }
-
-  header nav {
+  .nav {
     font-size: 1.125rem;
+    display: flex;
+    align-items: center;
   }
-
+  .nav__list {
+    gap: 1rem;
+  }
+  .nav__cta {
+    font-size: 1rem;
+    font-weight: 700;
+    gap: 1rem;
+    margin-left: 1.5rem;
+  }
+  .nav__btn {
+    background-color: var(--clr-orange);
+    border: 1px solid var(--clr-orange);
+    border-radius: 100px;
+    color: var(--clr-white);
+    padding: .9rem 1.5rem;
+  }
+  .nav__btn-white {
+    background-color: var(--clr-white);
+    color: var(--clr-orange);
+  }
+  .toggle {
+    display: none;
+  }
+  
   /* sub menu */
-  .bg-basketball {
+  .subMenu__bg {
     background: url(./images/basketball_ellipse-left.svg), url(./images/basketball_M-desktop.svg), url(./images/basketball_line-desktop.svg), url(./images/basketball_ellipse-right.svg), var(--clr-orange);
     background-position: left center, center, left center, right center;
     background-repeat: no-repeat, no-repeat, repeat-x, no-repeat;
   }
-  .bg-basketball .container {
+  .subMenu__bg .container {
     flex-direction: row;
     align-items: center;
   }
@@ -561,4 +604,104 @@ header hr {
   #hero p {
     width: 57%;
   }
+}
+
+@media (max-width:919px) {
+  header {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    left: 0;
+    background-color: var(--clr-white);
+    width: 100%;
+    z-index: 1000;
+  }
+  header.sticky {
+    background-color: rgba(255, 255, 255, .9)
+  }
+  .nav {
+    position: absolute;
+    top: 93px;
+    left: 0;
+    background-color: var(--clr-white);
+    font-size: 1.5rem;
+    width: 100%;
+    height: calc(100vh - 93px);
+    overflow-y: scroll;
+    z-index: 3;
+    padding-block: 85px;
+    visibility: hidden;
+    opacity: 0;
+    transition: .5s;
+  }
+  .nav.active {
+    visibility: visible;
+    opacity: 1;
+  }
+  .nav__list {
+    flex-direction: column;
+    gap: 1.5rem;
+    padding-bottom:60px;
+  }
+  .nav__item {
+    text-align: center;
+  }
+  .nav__cta {
+    flex-direction: column;
+    justify-content: center;
+    gap: 64px;
+    height: 140px;
+    text-align: center;
+  }
+  .nav__cta::before {
+    content: '';
+    position: absolute;
+    border-top: 1px solid var(--clr-black);
+    width: 100%;
+  }
+  .nav__cta {
+    background: url(./images/basketball_nav_ellipse-left.svg), url(./images/basketball_nav_ellipse-right.svg);
+    background-position: left center, right center;
+    background-repeat: no-repeat;
+  }
+  .nav__cta a {
+    color: var(--clr-orange);
+    font-weight: 700;
+  }
+  .toggle {
+    display: block;
+    position: relative;
+    width: 32px;
+    height: 18px;
+    cursor: pointer;
+  }
+  .toggle:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 2px;
+    background: var(--clr-gray);
+    z-index: 1;
+    box-shadow: 0 8px 0 var(--clr-gray);
+    transition: 0.5s;
+  }
+  .toggle:after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background: var(--clr-gray);
+    z-index: 1;
+    transition: 0.5s;
+  }
+    .toggle.active::before{
+    transform: translateY(8px) rotate(45deg);
+    box-shadow: none;
+  }
+  .toggle.active::after{
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
 }
