--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ h6 {
   text-transform: uppercase;
   transition: .3s ease-out;
 }
-.btn:hover {
+:is(.btn, .nav__btn):hover {
   transform: scale(1.05);
 }
 .btn-white {
@@ -169,6 +169,10 @@ hr {
   border: 0;
   border-bottom: 1px solid var(--clr-black);
 }
+ul {
+  list-style: none;
+  padding: unset;
+}
 /* header */
 header .container {
   position: relative;
@@ -181,18 +185,13 @@ header .logo__img {
 }
 nav a {
   color: var(--clr-gray);
-  transition: .3s ease-out;
 }
-nav a:hover {
-  transform: scale(1.05);
-  }
 .nav__list {
   list-style: none;
   display: flex;
   padding: 0;
 }
 .nav__item {
-  opacity: 1;
   transition: .3s ease-out;
 }
 .nav__item:hover {
@@ -456,12 +455,65 @@ header hr {
   gap: clamp(0.625rem, 0.207rem + 1.783vw, 1.5rem);
 }
 
-/* FOOTER */
+/* Footer */
+footer {
+  color: var(--clr-white);
+}
+footer a {
+  color: inherit;
+}
 .footer {
   background-color: var(--clr-orange);
 }
-.copyright {
+.footer .container {
+  gap: 2rem;
+  line-height: 1.6;
+  padding-block: 3.5rem;
+  text-align: center;
+}
+.footer h3 {
+  margin-bottom: clamp(0.5rem, 0.022rem + 2.038vw, 1.5rem);
+}
+.footer__logo__img {
+  margin: 0 auto;
+  width: clamp(8.063rem, 5.137rem + 12.484vw, 14.188rem);
+}
+.footer__contact__email {
+  margin-top: clamp(0.5rem, 0.261rem + 1.019vw, 1rem);
+}
+.footer__menu a:hover {
+  opacity: 0.6;
+}
+
+.footer__sic {
+  justify-content: center;
+  gap: 1rem;
+}
+.footer__sic .fa {
+  display: grid;
+  place-items: center;
+  border: 1px solid var(--clr-white);
+  border-radius: 50%;
+  font-size: 1.8rem;
+  height: 75px;
+  width: 75px;
+  transition: .5s ease-out;
+}
+.footer__sic .fa:hover {
+  background-color: var(--clr-white);
+  color: var(--clr-orange);
+}
+.footer__copyright {
   background-color: var(--clr-black);
+}
+.footer__copyright .container {
+  flex-direction: column-reverse;
+  align-items: center;
+  gap: 0.5rem;
+  padding-block: 1.8rem;
+}
+.footer__copyright a {
+  text-decoration: underline;
 }
 
 /* ==================== MEDIA QUERY ==================== */
@@ -565,6 +617,7 @@ header hr {
     border-radius: 100px;
     color: var(--clr-white);
     padding: .9rem 1.5rem;
+    transition: .3s ease-out;
   }
   .nav__btn-white {
     background-color: var(--clr-white);
@@ -597,6 +650,25 @@ header hr {
   .subMenu__txt p:nth-child(1) {
     margin-top: 7.5rem;
     margin-bottom: 40px;
+  }
+
+  /* Footer */
+  .footer .container {
+    grid-template-columns: repeat(4,1fr);
+    text-align: left;
+  }
+  .footer__logo__img {
+    margin: unset;
+  }
+  .footer__logo {
+    justify-self: start;
+  }
+  .footer__menu {
+    justify-self: end;
+  }
+  .footer__copyright .container {
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
 /* ---------- 1441px ---------- */
