--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ header .container {
 }
 header .logo__img {
   height: 60px;
+  transition: .5s ease-out;
 }
 nav a {
   color: var(--clr-gray);
@@ -679,17 +680,22 @@ footer a {
 }
 
 @media (max-width:919px) {
-  header {
+  header.sticky {
     position: sticky;
     position: -webkit-sticky;
     top: 0;
     left: 0;
-    background-color: var(--clr-white);
     width: 100%;
     z-index: 1000;
   }
   header.sticky {
     background-color: rgba(255, 255, 255, .9)
+  }
+  header.sticky .container {
+    padding-block: 0.5rem;
+  }
+  header.sticky .logo__img {
+    height: 36px;
   }
   .nav {
     position: absolute;
