--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ header hr {
   position: absolute;
   top: 0;
   right: 0;
-  width: clamp(12.5rem, -1.831rem + 61.146vw, 42.5rem);
+  width: 220px;
   z-index: 0;
 }
 
@@ -525,12 +525,16 @@ footer a {
   #hero {
     margin: 3rem 0 5rem;
   }
+  #hero .hero-img {
+    max-width: 42.5rem;
+    width: 45%;
+  }
   #hero h1 {
     padding-top: unset;
     width: unset;
   }
   #hero p {
-    width: 56%;
+    width: 53%;
   }
 
   /* Imagine Learning & Elgibility Registration */
