--- a/style.css
+++ b/style.css
@@ -486,6 +486,7 @@ header hr {
   background-size: cover;
   color: var(--clr-white);
   text-align: center;
+  padding-inline: .5rem;
   margin-bottom: 1.5rem;
 }
 .page-menu-active h1 {
@@ -558,10 +559,15 @@ header hr {
 }
 
 /* FACILITIES */
-.facility-img {
+.facilitiesSlider > .swiper-wrapper > a {
+  width: 100%;
   height: auto;
   object-fit: cover;
 }
+/* .facility-img {
+  height: auto;
+  object-fit: cover;
+} */
 
 /* MOTTO */
 .motto {
